# mingw-contrib

./: AUTHORS  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/bthprops/: CMakeLists.txt  bthprops.def
src/mfuuid/: CMakeLists.txt  libmfuuid.c
src/mfuuid/include/: mfcaptureengine.h  mfd3d12.h
src/propsys/: CMakeLists.txt
